--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<ul>
-    <li class="text" *ngFor="let item of items$ | async">
+<ul class="pl-10">
+    <li *ngFor="let item of items$ | async">
         {{ item.name }}
     </li>
 </ul>
