Squashed commit of the following:
commit cfdd6a7c97e530df240fe95a61ce6f61e5c84022
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:51:33 2023 -0500

    initial sidebar

commit 09a0ccaa1f2336afa208580bc8582e53e7796611
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:42:06 2023 -0500

    remove css file

commit 7ca4688f12e70eeb8ec5959fa0e3940f5fee9a4b
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:41:22 2023 -0500

    editor config

commit dee0da98fc3b701ba4108beae4cae30540186e1b
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:41:10 2023 -0500

    add css.gg

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
-<ul class="pl-10">
-    <li *ngFor="let item of items$ | async">
-        {{ item.name }}
-    </li>
-</ul>
+<div
+    class="fixed bottom-0 m-0 flex h-20 w-screen flex-row items-center bg-gray-400 px-2 md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
+>
+    <app-sidebar-icon>
+        <i class="gg-home-alt"></i>
+    </app-sidebar-icon>
+    <app-sidebar-icon>
+        <i class="gg-list"></i>
+    </app-sidebar-icon>
+</div>
 
 <router-outlet></router-outlet>
