--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,20 @@
-<div
-    class="fixed bottom-0 m-0 flex h-20 w-screen flex-row items-center bg-gray-400 px-2 md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
->
-    <app-sidebar-icon>
-        <i class="gg-home-alt"></i>
-    </app-sidebar-icon>
-    <app-sidebar-icon>
-        <i class="gg-list"></i>
-    </app-sidebar-icon>
-</div>
+<div class="flex">
+    <div
+        class="fixed bottom-0 m-0 flex h-20 w-screen flex-row items-center bg-gray-400 px-2 md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
+    >
+        <a routerLink="/">
+            <app-sidebar-icon>
+                <i class="gg-home-alt"></i>
+            </app-sidebar-icon>
+        </a>
+        <a routerLink="/recipes">
+            <app-sidebar-icon>
+                <i class="gg-list"></i>
+            </app-sidebar-icon>
+        </a>
+    </div>
 
-<router-outlet></router-outlet>
+    <div class="m-0 flex h-full w-full md:ml-16">
+        <router-outlet></router-outlet>
+    </div>
+</div>
