--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="flex">
     <div
-        class="fixed bottom-0 m-0 flex h-20 w-screen flex-row items-center bg-gray-400 px-2 md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
+        class="fixed bottom-0 m-0 flex h-20 w-screen flex-row items-center bg-gray-300 px-2 dark:bg-gray-900 md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
     >
         <a routerLink="/">
             <app-sidebar-icon>
