--- a/src/app/navigation/topbar/topbar.component.html
+++ b/src/app/navigation/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <header
-    class="sticky top-0 flex w-full flex-row items-center bg-white px-2 py-3 shadow-md dark:bg-gray-900 dark:text-white"
+    class="sticky top-0 z-50 flex w-full flex-row items-center bg-white px-3 py-3 shadow-md dark:bg-gray-900 dark:text-white"
 >
     <ng-content></ng-content>
 </header>
