--- a/src/app/recipes-page/recipes-page.component.html
+++ b/src/app/recipes-page/recipes-page.component.html
@@ -1,19 +1,18 @@
 <app-topbar>
     <div class="text-xl"><b>Recipes</b></div>
-    <div
+    <a
+        routerLink="/recipe/new"
         class="ml-auto w-fit cursor-pointer rounded-lg bg-gray-300 px-4 py-5 hover:bg-blue-300 dark:bg-gray-600 dark:hover:bg-blue-700"
     >
         <i class="gg-math-plus"></i>
-    </div>
+    </a>
 </app-topbar>
 
-<div class="px-3 pt-3 dark:bg-gray-700">
-    @for (
-        recipe of [rec, rec, rec, rec, rec, rec, rec, rec, rec, rec, rec, rec, rec, rec, rec, rec, rec];
-        track $index
-    ) {
+<div class="h-[calc(100vh-4rem)] px-3 pt-3 dark:bg-gray-700">
+    @for (recipe of [rec]; track $index) {
         <div class="mb-4 w-full rounded-md bg-gray-200 p-2 shadow-lg dark:bg-neutral-600 dark:text-gray-400">
             <b class="dark:text-gray-300">{{ rec.name }}</b>
+
             <!-- Ingredients -->
             <div class="flex flex-wrap">
                 @for (ingredient of recipe.items; track $index) {
@@ -38,5 +37,6 @@
             </div>
         </div>
     }
+    <!-- Spacer -->
     <div class="h-4"></div>
 </div>
