--- a/src/app/edit-recipe/edit-recipe.component.html
+++ b/src/app/edit-recipe/edit-recipe.component.html
@@ -12,23 +12,25 @@
     </button>
 </app-topbar>
 
-<div class="h-[calc(100vh-3rem)] w-full dark:bg-gray-700 dark:text-gray-200">
-    <div class="h-full w-full p-4">
-        <form [formGroup]="recipeForm">
-            <!-- Title -->
-            <div class="flex flex-row items-center">
-                <label class="text-xl" for="name">Title: </label>
-                <input
-                    formControlName="name"
-                    class="ml-2 w-full flex-1 bg-gray-200 p-2 dark:bg-gray-800"
-                    (keyup.enter)="addItem()"
-                />
-            </div>
+<div class="h-auto w-full p-4 dark:bg-gray-700 dark:text-gray-200">
+    <form [formGroup]="recipeForm">
+        <!-- Title -->
+        <div class="flex flex-row items-center">
+            <label class="text-xl" for="name">Title: </label>
+            <input
+                formControlName="name"
+                class="ml-2 w-full flex-1 bg-gray-200 p-2 dark:bg-gray-800"
+                (keyup.enter)="addItem()"
+            />
+        </div>
 
-            <!-- Ingredients -->
-            <div class="w-full" formArrayName="items">
-                <div class="mb-1 mt-2 text-xl">Ingredients</div>
-                <div class="mb-1 flex flex-col">
+        <!-- Ingredients -->
+        <div class="w-full" formArrayName="items">
+            <div class="mb-1 mt-2 text-xl">Ingredients</div>
+            <div class="mb-1 flex flex-col space-y-2">
+                @if (items.controls.length === 0) {
+                    <div class="ml-2">Add an Ingredient</div>
+                } @else {
                     <div
                         *ngFor="let itemForm of items.controls; let i = index"
                         [formGroupName]="i"
@@ -66,30 +68,30 @@
                             (keyup.enter)="addItem(i + 1)"
                         />
                     </div>
-                </div>
-
-                <!-- Add Item Button -->
-                <button
-                    (click)="addItem()"
-                    class="ml-auto mt-1 flex h-8 w-8 items-center justify-center rounded-md bg-gray-300"
-                    type="button"
-                >
-                    <i class="gg-math-plus"></i>
-                </button>
+                }
             </div>
 
-            <!-- Instructions -->
-            <div>
-                <label class="mb-1 text-xl" for="instructions">Instructions</label>
-                <div class="grow-wrap">
-                    <textarea
-                        formControlName="instructions"
-                        id="instructions"
-                        class="h-full w-full resize-none bg-gray-100 p-2 dark:bg-gray-800"
-                        onInput="this.parentNode.dataset.replicatedValue = this.value"
-                    ></textarea>
-                </div>
+            <!-- Add Item Button -->
+            <button
+                (click)="addItem()"
+                class="ml-auto mt-1 flex h-8 w-8 items-center justify-center rounded-md bg-gray-300"
+                type="button"
+            >
+                <i class="gg-math-plus"></i>
+            </button>
+        </div>
+
+        <!-- Instructions -->
+        <div>
+            <label class="mb-1 text-xl" for="instructions">Instructions</label>
+            <div class="grow-wrap">
+                <textarea
+                    formControlName="instructions"
+                    id="instructions"
+                    class="h-full w-full resize-none bg-gray-100 p-2 dark:bg-gray-800"
+                    onInput="this.parentNode.dataset.replicatedValue = this.value"
+                ></textarea>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
