--- a/src/app/recipes-page/recipes-page.component.html
+++ b/src/app/recipes-page/recipes-page.component.html
@@ -9,34 +9,35 @@
 </app-topbar>
 
 <div class="h-[calc(100vh-4rem)] px-3 pt-3 dark:bg-gray-700">
-    @for (recipe of [rec]; track $index) {
-        <div class="mb-4 w-full rounded-md bg-gray-200 p-2 shadow-lg dark:bg-neutral-600 dark:text-gray-400">
-            <b class="dark:text-gray-300">{{ rec.name }}</b>
+    <div
+        *ngFor="let recipe of recipes$ | async"
+        class="mb-4 w-full rounded-md bg-gray-200 p-2 shadow-lg dark:bg-neutral-600 dark:text-gray-400"
+    >
+        <b class="dark:text-gray-300">{{ recipe.name }}</b>
 
-            <!-- Ingredients -->
-            <div class="flex flex-wrap">
-                @for (ingredient of recipe.items; track $index) {
-                    <div class="mr-2 flex flex-row">
-                        <div class="text-blue-700 dark:text-blue-500">
-                            {{ ingredient.quantity }}
-                        </div>
-                        <div class="mr-1 text-gray-500 dark:text-gray-400">
-                            {{ ingredient.unit }}
-                        </div>
-                        <div>
-                            {{ ingredient.name }}
-                        </div>
+        <!-- Ingredients -->
+        <div class="flex flex-wrap">
+            @for (ingredient of recipe.items; track $index) {
+                <div class="mr-2 flex flex-row">
+                    <div class="text-blue-700 dark:text-blue-500">
+                        {{ ingredient.quantity }}
                     </div>
-                }
-            </div>
-            <!-- Instructions -->
-            <div class="mt-2">
-                <i>
-                    {{ rec.instructions }}
-                </i>
-            </div>
+                    <div class="mr-1 text-gray-500 dark:text-gray-400">
+                        {{ ingredient.unit }}
+                    </div>
+                    <div>
+                        {{ ingredient.name }}
+                    </div>
+                </div>
+            }
         </div>
-    }
+        <!-- Instructions -->
+        <div class="mt-2">
+            <i>
+                {{ recipe.instructions }}
+            </i>
+        </div>
+    </div>
     <!-- Spacer -->
     <div class="h-4"></div>
 </div>
