--- a/src/app/recipes-page/recipes-page.component.html
+++ b/src/app/recipes-page/recipes-page.component.html
@@ -1,17 +1,18 @@
 <app-topbar>
     <div class="text-xl"><b>Recipes</b></div>
     <a
-        routerLink="/recipe/new"
+        routerLink="/recipes/new"
         class="ml-auto w-fit cursor-pointer rounded-lg bg-gray-300 px-4 py-5 hover:bg-blue-300 dark:bg-gray-600 dark:hover:bg-blue-700"
     >
         <i class="gg-math-plus"></i>
     </a>
 </app-topbar>
 
-<div class="h-[calc(100vh-4rem)] px-3 pt-3 dark:bg-gray-700">
-    <div
+<div class="h-auto space-y-4 px-3 pt-3 dark:bg-gray-700">
+    <a
         *ngFor="let recipe of recipes$ | async"
-        class="mb-4 w-full rounded-md bg-gray-200 p-2 shadow-lg dark:bg-neutral-600 dark:text-gray-400"
+        class="block w-full rounded-md bg-gray-200 p-2 text-left shadow-lg dark:bg-neutral-600 dark:text-gray-400"
+        [routerLink]="recipe.id"
     >
         <b class="dark:text-gray-300">{{ recipe.name }}</b>
 
@@ -37,7 +38,7 @@
                 {{ recipe.instructions }}
             </i>
         </div>
-    </div>
+    </a>
     <!-- Spacer -->
     <div class="h-4"></div>
 </div>
