--- a/src/app/recipes-page/list-recipes/list-recipes.component.html
+++ b/src/app/recipes-page/list-recipes/list-recipes.component.html
@@ -1,7 +1,7 @@
 <app-topbar>
     <div class="text-xl"><b>Recipes</b></div>
     <a
-        routerLink="/recipes/new"
+        routerLink="/recipes/new/edit"
         class="ml-auto w-fit cursor-pointer rounded-lg bg-gray-300 px-4 py-5 hover:bg-blue-300 dark:bg-gray-600 dark:hover:bg-blue-700"
     >
         <i class="gg-math-plus"></i>
