--- a/src/app/recipes-page/view-recipe/view-recipe.component.html
+++ b/src/app/recipes-page/view-recipe/view-recipe.component.html
@@ -1,33 +1,35 @@
-<app-topbar>
-    <div class="text-xl">
-        <b>{{ recipe?.name }}</b>
-    </div>
-</app-topbar>
-
-<div class="h-[calc(100vh-3rem)] w-full dark:bg-gray-700 dark:text-gray-200">
-    <div class="h-full w-full p-4">
-        <!-- Ingredients -->
-        <div class="text-left text-xl">Ingredients</div>
-        <div class="md:max-h-1/4 mt-2 flex flex-col flex-wrap">
-            @for (item of recipe?.items; track $index) {
-                <div class="flex flex-row items-baseline md:w-1/4">
-                    <div>
-                        {{ '▷ ' + item.name }}
-                    </div>
-                    <div class="flex-1 border-t-2 border-dashed dark:border-gray-500"></div>
-                    <div class="">
-                        {{ item.quantity }}
-                        {{ item.unit }}
-                    </div>
-                </div>
-            }
+<ng-container *ngIf="recipe$ | async as recipe">
+    <app-topbar>
+        <div class="text-xl">
+            <b>{{ recipe?.name }}</b>
         </div>
+    </app-topbar>
 
-        <!-- Divider -->
-        <div class="mt-3 h-1 w-full border-t-2 border-double border-gray-300 dark:border-gray-500"></div>
+    <div class="h-[calc(100vh-3rem)] w-full dark:bg-gray-700 dark:text-gray-200">
+        <div class="h-full w-full p-4">
+            <!-- Ingredients -->
+            <div class="text-left text-xl">Ingredients</div>
+            <div class="md:max-h-1/4 mt-2 flex flex-col flex-wrap">
+                @for (item of recipe?.items; track $index) {
+                    <div class="flex flex-row items-baseline md:w-1/4">
+                        <div>
+                            {{ '▷ ' + item.name }}
+                        </div>
+                        <div class="flex-1 border-t-2 border-dashed dark:border-gray-500"></div>
+                        <div class="">
+                            {{ item.quantity }}
+                            {{ item.unit }}
+                        </div>
+                    </div>
+                }
+            </div>
 
-        <!-- Instructions -->
-        <div class="mt-2 text-left text-xl">Instructions</div>
-        <div>{{ recipe?.instructions }}</div>
+            <!-- Divider -->
+            <div class="mt-3 h-1 w-full border-t-2 border-double border-gray-300 dark:border-gray-500"></div>
+
+            <!-- Instructions -->
+            <div class="mt-2 text-left text-xl">Instructions</div>
+            <div>{{ recipe?.instructions }}</div>
+        </div>
     </div>
-</div>
+</ng-container>
