setting icon directs to settings uri

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
             <i class="gg-list"></i>
         </app-sidebar-icon>
     </a>
-    <a class="cursor-default" class="md:mt-auto">
+    <a class="cursor-default" class="md:mt-auto" routerLink="/settings">
         <app-sidebar-icon>
             <i class="gg-options"></i>
         </app-sidebar-icon>
