remove height thing

--- a/src/app/components/recipes-page/view-recipe/view-recipe.component.html
+++ b/src/app/components/recipes-page/view-recipe/view-recipe.component.html
@@ -15,7 +15,7 @@
         </a>
     </app-topbar>
 
-    <div class="h-[calc(100vh-3rem)] w-full dark:bg-gray-700 dark:text-gray-200">
+    <div class="w-full dark:bg-gray-700 dark:text-gray-200">
         <div class="h-full w-full p-4">
             <!-- Ingredients -->
             <div class="text-left text-xl">Ingredients</div>
