--- a/src/app/components/recipes-page/view-recipe/view-recipe.component.html
+++ b/src/app/components/recipes-page/view-recipe/view-recipe.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="recipe$ | async as recipe">
+<ng-container *ngIf="recipe$ | async as recipe; else loadingRef">
     <app-topbar>
         <div class="text-xl">
             <b>{{ recipe.name }}</b>
@@ -49,3 +49,11 @@
         </div>
     </div>
 </ng-container>
+
+<!-- Loading -->
+<ng-template #loadingRef>
+    <app-topbar></app-topbar>
+    <div class="mt-2 flex w-full justify-center">
+        <i class="gg-spinner"></i>
+    </div>
+</ng-template>
