--- a/src/app/components/navigation/topbar/topbar.component.html
+++ b/src/app/components/navigation/topbar/topbar.component.html
@@ -1,5 +1,3 @@
-<header
-    class="sticky top-0 z-50 flex w-full flex-row items-center bg-white px-3 py-3 shadow-md dark:bg-gray-900 dark:text-white"
->
+<header class="sticky top-0 z-50 flex w-full flex-row items-center bg-white px-3 py-3 shadow-md">
     <ng-content></ng-content>
 </header>
