--- a/src/app/components/recipes-page/list-recipes/list-recipes.component.html
+++ b/src/app/components/recipes-page/list-recipes/list-recipes.component.html
@@ -2,28 +2,28 @@
     <div class="text-xl"><b>Recipes</b></div>
     <a
         routerLink="/recipes/new/edit"
-        class="ml-auto w-fit cursor-pointer rounded-lg bg-gray-300 px-4 py-5 hover:bg-blue-300 dark:bg-gray-600 dark:hover:bg-blue-700"
+        class="ml-auto w-fit cursor-pointer rounded-lg bg-gray-300 px-4 py-5 hover:bg-blue-300"
     >
         <i class="gg-math-plus"></i>
     </a>
 </app-topbar>
 
-<div class="h-auto space-y-4 px-3 pt-3 dark:bg-gray-700">
+<div class="h-auto space-y-4 px-3 pt-3">
     <ng-container *ngIf="recipes$ | async as recipes; else loadingRef">
         <a
             *ngFor="let recipe of recipes"
-            class="block w-full rounded-md bg-gray-200 p-2 text-left shadow-lg dark:bg-neutral-600 dark:text-gray-400"
+            class="block w-full rounded-md bg-gray-200 p-2 text-left shadow-lg"
             [routerLink]="recipe.id"
         >
-            <b class="dark:text-gray-300">{{ recipe.name }}</b>
+            <b>{{ recipe.name }}</b>
 
             <!-- Ingredients -->
             <div class="flex flex-wrap">
                 <div *ngFor="let ingredient of recipe.items" class="mr-2 flex flex-row">
-                    <div class="text-blue-700 dark:text-blue-500">
+                    <div class="text-blue-700">
                         {{ ingredient.quantity }}
                     </div>
-                    <div class="mr-1 text-gray-500 dark:text-gray-400">
+                    <div class="mr-1 text-gray-500">
                         {{ ingredient.unit }}
                     </div>
                     <div>
