--- a/src/app/components/recipes-page/view-recipe/view-recipe.component.html
+++ b/src/app/components/recipes-page/view-recipe/view-recipe.component.html
@@ -15,7 +15,7 @@
         </a>
     </app-topbar>
 
-    <div class="w-full dark:bg-gray-700 dark:text-gray-200">
+    <div class="w-full">
         <div class="h-full w-full p-4">
             <!-- Ingredients -->
             <div class="text-left text-xl">Ingredients</div>
@@ -25,7 +25,7 @@
                         <div>
                             {{ '▷ ' + item.name }}
                         </div>
-                        <div class="flex-1 border-t-2 border-dashed dark:border-gray-500"></div>
+                        <div class="flex-1 border-t-2 border-dashed"></div>
                         <div class="">
                             {{ item.quantity }}
                             {{ item.unit }}
@@ -37,7 +37,7 @@
             </div>
 
             <!-- Divider -->
-            <div class="mt-3 h-1 w-full border-t-2 border-double border-gray-300 dark:border-gray-500"></div>
+            <div class="mt-3 h-1 w-full border-t-2 border-double border-gray-300"></div>
 
             <!-- Instructions -->
             <div class="mt-2 text-left text-xl">Instructions</div>
