Create Recipes Page (#10)
* add routing with recipes page

* cleanup sidebar-icon template

* some dark config

* styling and add settings icon

* comment out for now

* initial recipe work

* UI changes

* changed file structure

* configs

* add support for resizing textarea

* minor top bar adjustment

* Add new routes

* styling

* add reading recipes from cloud

* Add support for adding recipes

* view already-created recipe

* Add member-ordering eslint rule

* Recipe automatically updates when viewing

* update eslintrc.js

* add comment

* add edit recipe ability

* organization

* use Observables for getting recipes

* Add page not found component

* setting icon directs to settings uri

* move components to components folder

* Add edit button on recipe view

* navigate back to view recipe on save

* remove height thing

* no ingredients/instructions message

* fix instructions text area auto resize

* add loading spinners

* use updated angular modules

* remove dark mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,24 @@
 <div
-    class="fixed bottom-0 m-0 flex h-20 w-screen flex-row items-center bg-gray-400 px-2 md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
+    class="fixed bottom-0 flex h-20 w-screen flex-row items-center bg-gray-300 px-2 blur-none md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
 >
-    <app-sidebar-icon>
-        <i class="gg-home-alt"></i>
-    </app-sidebar-icon>
-    <app-sidebar-icon>
-        <i class="gg-list"></i>
-    </app-sidebar-icon>
+    <a class="cursor-default" routerLink="/home">
+        <app-sidebar-icon>
+            <i class="gg-home-alt"></i>
+        </app-sidebar-icon>
+    </a>
+    <a class="cursor-default" routerLink="/recipes">
+        <app-sidebar-icon>
+            <i class="gg-list"></i>
+        </app-sidebar-icon>
+    </a>
+    <a class="cursor-default" class="md:mt-auto" routerLink="/settings">
+        <app-sidebar-icon>
+            <i class="gg-options"></i>
+        </app-sidebar-icon>
+    </a>
 </div>
 
-<router-outlet></router-outlet>
+<main class="mb-20 md:mb-0 md:ml-16">
+    <router-outlet></router-outlet>
+</main>
+<div></div>
