--- a/src/app/components/navigation/sidebar-icon/sidebar-icon.component.html
+++ b/src/app/components/navigation/sidebar-icon/sidebar-icon.component.html
@@ -1,5 +1,5 @@
 <div
-    class="relative m-2 flex h-14 w-14 items-center justify-center rounded-md border-black bg-white text-black shadow-lg transition-all md:h-12 md:w-12 md:hover:bg-blue-300"
+    class="relative m-2 flex h-14 w-14 items-center justify-center rounded-md border-black bg-white text-black shadow-sm transition-all md:h-12 md:w-12 md:hover:bg-blue-300"
 >
     <ng-content></ng-content>
 </div>
