minor ui tweaks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- Sidebar -->
 <div
     class="fixed bottom-0 flex h-20 w-screen flex-row items-center bg-gray-300 px-2 blur-none md:top-0 md:h-screen md:w-16 md:flex-col md:py-2"
 >
@@ -18,7 +19,7 @@
     </a>
 </div>
 
-<main class="mb-20 md:mb-0 md:ml-16">
+<!-- Main content -->
+<main class="mb-20 h-1 min-h-screen md:mb-0 md:pl-16">
     <router-outlet></router-outlet>
 </main>
-<div></div>
