--- a/src/app/components/recipes-page/view-recipe/view-recipe.component.html
+++ b/src/app/components/recipes-page/view-recipe/view-recipe.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="recipe$ | async as recipe; else loadingRef">
+<ng-container *ngIf="recipe$ | async as recipe; else loadingOrErrorRef">
     <app-topbar>
         <div class="text-xl">
             <b>{{ recipe.name }}</b>
@@ -51,9 +51,13 @@
 </ng-container>
 
 <!-- Loading -->
-<ng-template #loadingRef>
-    <app-topbar></app-topbar>
-    <div class="mt-2 flex w-full justify-center">
-        <i class="gg-spinner"></i>
-    </div>
+<ng-template #loadingOrErrorRef>
+    @if (status() === 'error') {
+        <app-page-not-found></app-page-not-found>
+    } @else {
+        <app-topbar></app-topbar>
+        <div class="mt-2 flex w-full justify-center">
+            <i class="gg-spinner"></i>
+        </div>
+    }
 </ng-template>
