--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,14 @@
             <i class="gg-home-alt"></i>
         </app-sidebar-icon>
     </a>
+    <a class="cursor-default" routerLink="/general-list">
+        <app-sidebar-icon>
+            <i class="gg-calendar-two"></i>
+        </app-sidebar-icon>
+    </a>
     <a class="cursor-default" routerLink="/recipes">
         <app-sidebar-icon>
-            <i class="gg-list"></i>
+            <i class="gg-briefcase"></i>
         </app-sidebar-icon>
     </a>
     <a class="cursor-default" class="md:mt-auto" routerLink="/settings">
