--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
 </div>
 
 <!-- Main content -->
-<main class="mb-20 h-1 min-h-screen md:mb-0 md:pl-16">
+<main class="mb-20 h-1 min-h-[calc(100svh-80px)] md:mb-0 md:min-h-[100svh] md:pl-16">
     <router-outlet></router-outlet>
 </main>
