refactor to use declaritive approach

--- a/src/app/components/recipes-page/edit-recipe/edit-recipe.component.html
+++ b/src/app/components/recipes-page/edit-recipe/edit-recipe.component.html
@@ -1,13 +1,13 @@
 <ng-container *ngIf="status() === 'success' || (recipe$ | async) as recipe; else loadingOrErrorRef">
     <form
         *ngIf="status() !== 'error' && status; else loadingOrErrorRef"
-        (ngSubmit)="saveClicked()"
+        (ngSubmit)="save$.next()"
         [formGroup]="recipeForm"
     >
         <!-- Top Bar -->
         <app-topbar>
             <b class="text-xl">
-                @if (id === 'new') {
+                @if (newRecipe()) {
                     New Recipe
                 } @else {
                     Edit Recipe
