fix mobile view

--- a/src/app/components/recipes-page/list-recipes/list-recipes.component.html
+++ b/src/app/components/recipes-page/list-recipes/list-recipes.component.html
@@ -8,7 +8,7 @@
     </a>
 </app-topbar>
 
-<div class="h-auto space-y-4 px-3 pt-3">
+<div class="h-auto space-y-4 px-3 py-3">
     <ng-container *ngIf="recipes$ | async as recipes; else loadingRef">
         <a
             *ngFor="let recipe of recipes"
@@ -39,8 +39,6 @@
             </div>
         </a>
     </ng-container>
-    <!-- Spacer -->
-    <div class="h-4"></div>
 </div>
 
 <!-- Loading -->
