--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     </a>
 </div>
 
-<!-- Main content -->
-<main class="mb-20 h-1 min-h-[calc(100svh-80px)] md:mb-0 md:min-h-[100svh] md:pl-16">
+<main class="md:pl-16">
     <router-outlet></router-outlet>
+    <div class="h-20 w-screen md:hidden"></div>
 </main>
